Add gRPC Unit and Integration tests for Student and Codelist services